sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:7: error: not found: value i
      echange(i,i+1)
              ^AlgGnomeSort:7: error: not found: value i
      echange(i,i+1)
                ^AlgGnomeSort:9: error: not found: value i
    else if (plusPetit(k,i+1)){
                         ^