sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var lgr=getNombreValeurs()-1
  var k=0
  while (k<lgr){
    if (!plusPetit(k,k+1)){
      echange(i,i+1)
    }
    else if (plusPetit(k,i+1)){
      k+=1
    }
  }
}